--- a/style.css
+++ b/style.css
@@ -3,3 +3,30 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align:center;
+}
+img{
+  display:block;
+  margin:auto;
+}
+  nav a {
+    padding-left:10px;
+    padding-right:10px;
+    background-color:aquamarine;
+  }
+  figcaption{
+    font-size: smaller;
+    text-align:center;
+  }
+#featured-property p{
+  width:800px;
+  text-align:center;
+  margin:auto;
+}
+#details div{
+  float:left;
+  background-color:blueviolet;
+  text-align: center;
+  width: 25%;
+}
